--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,28 @@
     border-radius: 15px;
     padding: 20px;
     margin: 10px;
+    align-content: center;
+}
+
+.center_this
+{
+    margin: auto;
+    width: 50%;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 90px; 
+    padding: 10px;
+    font-size: 5em;
+    
+}
+
+.center_this_small
+{
+    margin: auto;
+    width: 50%;
+    text-align: center;
+    vertical-align: middle;
+    padding: 10px;
 }
 
 #form
@@ -12,4 +34,13 @@
     border-radius: 15px;
     padding: 20px;
     margin: 10px;
+}
+
+section
+{
+    border: 4px solid red;
+    border-radius: 15px;
+    padding: 20px;
+    margin: 10px;
+    align-content: center;
 }
