--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,35 @@
-#timerSection
+/*reset css*/
+/* Change all elements to use border-box */
+html
+{
+    box-sizing: border-box;
+}
+*, *:before, *:after
+{
+    box-sizing: inherit;
+}
+
+/*theme styles*/
+.background-primary {
+    background: #F7941E; /*Orange*/
+  }
+  .background-secondary {
+    background: #00AEEF; /*Blue*/
+  }
+  .background-tertiary {
+    background: #8DC63F; /*Green*/
+  }
+  
+  /*Color List:
+  - light blue = 00AEEF;
+  - dark blue = 1C75BC
+  - green = 8DC63F
+  - dark green = 009444
+  - orange = F7941E
+  - dark orange = F15A29
+  - brown = 594a42; */
+
+/* #timerSection
 {
     border: 4px solid red;
     border-radius: 15px;
@@ -43,4 +74,4 @@ section
     padding: 20px;
     margin: 10px;
     align-content: center;
-}
+} */
